--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.0",
     "expo": "~39.0.2",
+    "expo-image-manipulator": "~8.3.0",
+    "expo-image-picker": "~9.1.1",
     "expo-linear-gradient": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
